네이버api추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,5 @@ spring.mvc.hiddenmethod.filter.enabled=true
 #Authorization URL - https://auth.worksmobile.com/oauth2/v2.0/authorize
 #Token URL - https://auth.worksmobile.com/oauth2/v2.0/token
 #Refresh URL - https://auth.worksmobile.com/oauth2/v2.0/token
-
-
-naver.api.Client-id=E7PDGFwvOh7UsDt2rWE9
-naver.api.Client-Secret=Y3jiJbuNlv
+navar.api.client-id=E7PDGFwvOh7UsDt2rWE9
+navar.api.client-secret=Y3jiJbuNlv
